--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -1,1 +1,137 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SUZUKI AOI PORTFOLIO</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
+  <link href="https://fonts.cdnfonts.com/css/century-gothic-paneuropean" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
+  <link rel="stylesheet" href="../css/style.css">
+</head>
 
+<body>
+  <header id="top">
+    <div class="header-bg">
+      <a href="#top"><h2>SUZUKI AOI</h2></a>
+      <nav class="g-nav">
+        <h2 class="small-header">SUZUKI AOI</h2>
+        <div id="nav-toggle">
+          <span></span>
+        </div>
+        <ul>
+          <li>Top</li>
+          <li>Profile</li>
+          <li>Contents</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <div class="content-width">
+    <div class="ct-title">
+      <h1>bird coffee</h1>
+    </div>
+    <hr>
+    <div class="sec-top">
+      <div class="top-img left-width">
+        <img src="../image/bird_coffee/logo_01.png" alt="logo">
+      </div>
+      <div class="top-exp right-width">
+        <div class="exp-box">
+          <h2>Project</h2>
+          <h4>代々木公園に開くカフェ<br>園内のバードサンクチュアリに隣接<br>営業時間：7:30~23:00<br>公園内外のイベントへの参加、季節・自然の変化に応じた空間の使い方や食べ物の提案など、柔軟な利用を目標としている。</h4>
+        </div>
+        <div class="exp-box">
+          <h2>Target</h2>
+          <h4>代々木公園利用者、10代後半〜50代男女</h4>
+        </div>
+        <div class="exp-box">
+          <h2>Concept</h2>
+          <h4>それぞれの休息とちょうどいい時間を！</h4>
+        </div>
+        <div class="exp-box">
+          <h2>Item</h2>
+          <ul>
+            <li><h4>logo</h4></li>
+            <li><h4>package</h4></li>
+            <li><h4>website</h4></li>
+            <li><h4>copy</h4></li>
+          </ul>
+        </div>
+        <div class="exp-box">
+          <h2>Tool</h2>
+          <ul class="tool-icon">
+            <li></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="sec-1">
+      <div class="left-width">
+        <h1>Logo</h1>
+        <h5>お店のコンセプト「それぞれの休息とちょうど良い時間を！」に沿って、「bi」の造形と鳥が水を飲んでいるようなシルエットを組み合わせてキャッチーなアイコンとなるロゴを作成しました。</h5>
+        <ul>
+          <li>Diagram</li>
+          <li>1*1 Symbol mark</li>
+          <li>Symbol + Logotype</li>
+          <li>Symbol + Logotype(Negative)</li>
+        </ul>
+      </div>
+      <div class="right-width">
+
+      </div>
+    </div>
+
+    <div class="sec-2">
+      <div class="left-width">
+        <h1>Package</h1>
+        <ul>
+          <li>Diagram</li>
+          <li>1*1 Symbol mark</li>
+          <li>Symbol + Logotype</li>
+          <li>Symbol + Logotype(Negative)</li>
+        </ul>
+      </div>
+      <div class="right-width">
+
+      </div>
+    </div>
+
+    <div class="sec-3">
+      <div class="left-width">
+        <h1>Website</h1>
+        <ul>
+          <li>Diagram</li>
+          <li>1*1 Symbol mark</li>
+          <li>Symbol + Logotype</li>
+          <li>Symbol + Logotype(Negative)</li>
+        </ul>
+        <a href="https://www.bird-coffee.com"><h5>https://222.bird-coffee.com</h5></a>
+      </div>
+      <div class="right-width">
+
+      </div>
+    </div>
+
+    <div class="sec-4">
+      <div class="left-width">
+        <h1>Copy</h1>
+      </div>
+      <div class="right-width">
+        <div class="copy-box">
+          <h3>Poster ver.</h3>
+          <h5>公園で遊んだ後の休憩、ショッピングの間に散歩、ペットのお散歩ついでにウォーキング、仕事終わりにリフレッシュ、どんな時間にも寄り添える、ずっと空いているカフェをつくりました。朝のさわやかな空気を感じられる７:３０から、夜のお仕事終わりになんとやっている２３:００まで、ずっと営業しています。おいしいコーヒーと、食べ物もずっと置いています。とくに何も考えず、やっているかな？の心配もいりません。代々木公園でそれぞれの休息とちょうどいい時間を！</h5>
+        </div>
+        <div class="copy-box">
+          <h3>Web ver.</h3>
+          <h5>公園で遊んだ後の休憩、ショッピングのあいだに散歩、ペットのお散歩ついでにウォーキング、仕事終わりにリフレッシュ、どんな時間にも寄り添える、ちょっと長めに開いているコーヒーショップです。自然と鳥とそのとなりに、あなたにぴったりの時間を見つけてください。</h5>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</body>
+</html>
