--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <title>SUZUKI AOI PORTFOLIO</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
   <link href="https://fonts.cdnfonts.com/css/century-gothic-paneuropean" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-                
 </head>
 <body>
   <header id="top">
     <div class="header-bg">
       <a href="#top"><h2>SUZUKI AOI</h2></a>
       <nav class="g-nav">
+        <h2 class="small-header">SUZUKI AOI</h2>
         <div id="nav-toggle">
           <span></span>
         </div>
@@ -25,6 +26,21 @@
       </nav>
     </div>
   </header>
+
+  <hr>
+
+  <div class="content-box">
+    <ul class="content-list">
+      <li>
+        <a href="content/birdcoffee.html"><img src="image/bird_coffee/logo_01.png" alt="logo"></a>
+      </li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
   
 </body>
 </html>
