--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -8,23 +8,36 @@
   <link href="https://fonts.cdnfonts.com/css/century-gothic-paneuropean" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <!-- <link rel="stylesheet" href="../css/style_nav.css"> -->
 </head>
 
 <body>
   <header id="top">
     <div class="header-bg">
-      <a href="#top"><h2>SUZUKI AOI</h2></a>
-      <nav class="g-nav">
-        <h2 class="small-header">SUZUKI AOI</h2>
-        <div id="nav-toggle">
-          <span></span>
-        </div>
-        <ul>
-          <li>Top</li>
-          <li>Profile</li>
-          <li>Contents</li>
-        </ul>
-      </nav>
+      <a href="#top"><h2 class="big-header">SUZUKI AOI</h2></a>
+      <div class="small-header">
+        <a href="../index.html">
+          <h2 class="small-name">SUZUKI AOI</h2>
+        </a>
+        <nav>
+          <div class="navtoggle">
+            <button class="menu-trigger" id="menu07">
+              <span></span>
+              <span></span>
+              <span></span>
+            </button>
+          </div>
+          <div id="g-nav">
+            <ul>
+              <li><h2>Top</h2></li>
+              <li><h2>Profile</h2></li>
+              <li><h2>Contents</h2></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+      
     </div>
   </header>
 
@@ -132,6 +145,9 @@
     </div>
 
   </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="../js/main.js"></script>
 
 </body>
 </html>
