--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/header.css">
+  <link rel="stylesheet" href="../css/sub.css">
   <!-- <link rel="stylesheet" href="../css/style_nav.css"> -->
 </head>
 
@@ -44,8 +45,8 @@
   <div class="content-width">
     <div class="ct-title">
       <h1>bird coffee</h1>
+      <hr>
     </div>
-    <hr>
     <div class="sec-top">
       <div class="top-img left-width">
         <img src="../image/bird_coffee/logo_01.png" alt="logo">
@@ -75,13 +76,28 @@
         <div class="exp-box">
           <h2>Tool</h2>
           <ul class="tool-icon">
+            <li><img width="100" height="100" src="https://img.icons8.com/ios/100/adobe-illustrator--v1.png" alt="adobe-illustrator--v1"/></li>
+            <li><img width="100" height="100" src="https://img.icons8.com/ios/100/adobe-photoshop--v1.png" alt="adobe-photoshop--v1"/></li>
+            <li><img width="100" height="100" src="https://img.icons8.com/ios/100/figma--v1.png" alt="figma--v1"/></li>
+            <li><img width="100" height="100" src="https://img.icons8.com/ios/100/visual-studio.png" alt="visual-studio"/></li>
+            <li><img width="100" height="100" src="https://img.icons8.com/ios/100/javascript--v1.png" alt="javascript--v1"/></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <ul class="tool-icon">
+            <li><img width="96" height="96" src="https://img.icons8.com/color/96/adobe-illustrator--v1.png" alt="adobe-illustrator--v1"/></li>
+            <li><img width="96" height="96" src="https://img.icons8.com/color/96/adobe-photoshop--v1.png" alt="adobe-photoshop--v1"/></li>
+            <li><img width="80" height="80" src="https://img.icons8.com/color/80/figma--v1.png" alt="figma--v1"/></li>
+            <li><img width="80" height="80" src="https://img.icons8.com/color/80/visual-studio-code-2019.png" alt="visual-studio-code-2019"/></li>
+            <li></li>
+            <li></li>
             <li></li>
           </ul>
         </div>
       </div>
     </div>
 
-    <div class="sec-1">
+    <div class="sec-1 top-mg" id="area-1">
       <div class="left-width">
         <h1>Logo</h1>
         <h5>お店のコンセプト「それぞれの休息とちょうど良い時間を！」に沿って、「bi」の造形と鳥が水を飲んでいるようなシルエットを組み合わせてキャッチーなアイコンとなるロゴを作成しました。</h5>
@@ -93,13 +109,15 @@
         </ul>
       </div>
       <div class="right-width">
+        <div class="slider">
 
+        </div>
       </div>
     </div>
 
-    <div class="sec-2">
+    <div class="sec-2 top-mg">
       <div class="left-width">
-        <h1>Package</h1>
+        <h1>Pack<br>age</h1>
         <ul>
           <li>Diagram</li>
           <li>1*1 Symbol mark</li>
@@ -108,13 +126,15 @@
         </ul>
       </div>
       <div class="right-width">
+        <div class="slider">
 
+        </div>
       </div>
     </div>
 
-    <div class="sec-3">
+    <div class="sec-3 top-mg">
       <div class="left-width">
-        <h1>Website</h1>
+        <h1>Web<br>site</h1>
         <ul>
           <li>Diagram</li>
           <li>1*1 Symbol mark</li>
@@ -124,11 +144,13 @@
         <a href="https://www.bird-coffee.com"><h5>https://222.bird-coffee.com</h5></a>
       </div>
       <div class="right-width">
+        <div class="slider">
 
+        </div>
       </div>
     </div>
 
-    <div class="sec-4">
+    <div class="sec-4 top-mg">
       <div class="left-width">
         <h1>Copy</h1>
       </div>
@@ -147,7 +169,7 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="../js/main.js"></script>
+  <script src="../js/main.js"></script>
 
 </body>
 </html>
