--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -66,11 +66,11 @@
         </div>
         <div class="exp-box">
           <h2>Item</h2>
-          <ul>
-            <li><h4>logo</h4></li>
-            <li><h4>package</h4></li>
-            <li><h4>website</h4></li>
-            <li><h4>copy</h4></li>
+          <ul class="item-list">
+            <li><h4><a href="#area-1">logo</a></h4></li>
+            <li><h4><a href="#area-2">package</a></h4></li>
+            <li><h4><a href="#area-3">website</a></h4></li>
+            <li><h4><a href="#area-4">copy</a></h4></li>
           </ul>
         </div>
         <div class="exp-box">
@@ -115,7 +115,7 @@
       </div>
     </div>
 
-    <div class="sec-2 top-mg">
+    <div class="sec-2 top-mg" id="area-2">
       <div class="left-width">
         <h1>Pack<br>age</h1>
         <ul>
@@ -132,16 +132,19 @@
       </div>
     </div>
 
-    <div class="sec-3 top-mg">
+    <div class="sec-3 top-mg" id="area-3">
       <div class="left-width">
         <h1>Web<br>site</h1>
+        <a href="../bird_coffee/top.html" target="_blank">
+          <h5>web site<img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/external-link.png" alt="external-link"/></h5>
+        </a>
         <ul>
           <li>Diagram</li>
           <li>1*1 Symbol mark</li>
           <li>Symbol + Logotype</li>
           <li>Symbol + Logotype(Negative)</li>
         </ul>
-        <a href="https://www.bird-coffee.com"><h5>https://222.bird-coffee.com</h5></a>
+        
       </div>
       <div class="right-width">
         <div class="slider">
@@ -150,7 +153,7 @@
       </div>
     </div>
 
-    <div class="sec-4 top-mg">
+    <div class="sec-4 top-mg" id="area-4">
       <div class="left-width">
         <h1>Copy</h1>
       </div>
@@ -165,6 +168,13 @@
         </div>
       </div>
     </div>
+
+    <footer id="footer">
+      <p id="page-top"><a href="#">
+        <img width="48" height="48" src="https://img.icons8.com/android/48/collapse-arrow.png" alt="collapse-arrow"/>
+      </a></p>
+    </footer>
+    
 
   </div>
 
