--- a/bird_coffee/menu.html
+++ b/bird_coffee/menu.html
@@ -116,7 +116,7 @@
                 <img src="image/menu/season_drink.jpg" alt="coffee">
                 <h3>Season drink</h3>
               </a>
-              <p>- melon<br></p>
+              <p>- figs<br></p>
               <p class="price-box"><span class="price">520</span><span class="yen">円</span></p>
             </div>
           </li>
@@ -184,7 +184,7 @@
             <div class="height">
               <a href="_html/menu_item.html">
                 <img src="image/menu/late_4.jpg" alt="coffee">
-                <h3>Duble shot late</h3>
+                <h3>Double shot late</h3>
               </a>
               <p>- gatemara<br>- honduras</p>
               <p class="price-box"><span class="price">520</span><span class="yen">円</span></p>
@@ -214,7 +214,7 @@
             <div class="height">
               <a href="_html/menu_item.html">
                 <img src="image/menu/ice_late_2.jpg" alt="coffee">
-                <h3>Soy Ice late</h3>
+                <h3>Soy ice late</h3>
               </a>
               <p>- gatemara<br>- honduras</p>
               <p class="price-box"><span class="price">480</span><span class="yen">円</span></p>
@@ -234,7 +234,7 @@
             <div class="height">
               <a href="_html/menu_item.html">
                 <img src="image/menu/espresso_2.jpg" alt="coffee">
-                <h3>Duble Espresso</h3>
+                <h3>Double Espresso</h3>
               </a>
               <p>- gatemara<br>- honduras</p>
               <p class="price-box"><span class="price">520</span><span class="yen">円</span></p>
@@ -246,7 +246,7 @@
                 <img src="image/menu/fruit_smooth.jpg" alt="coffee">
                 <h3>Fruit smooth</h3>
               </a>
-              <p>- gatemara<br>- honduras</p>
+              <p>- mango<br></p>
               <p class="price-box"><span class="price">520</span><span class="yen">円</span></p>
             </div>
           </li>
@@ -256,7 +256,7 @@
                 <img src="image/menu/cookie.jpg" alt="coffee">
                 <h3>Cookie</h3>
               </a>
-              <p>- plain<br>- chocorate</p>
+              <p>- plain<br>- chocolate</p>
               <p class="price-box"><span class="price">220</span><span class="yen">円</span></p>
             </div>
           </li>
@@ -264,9 +264,9 @@
             <div class="height">
               <a href="_html/menu_item.html">
                 <img src="image/menu/chery_cake.jpg" alt="coffee">
-                <h3>Chery cake</h3>
+                <h3>Cherry cake</h3>
               </a>
-              <p>- 1pice<br></p>
+              <p>- 1piece<br></p>
               <p class="price-box"><span class="price">380</span><span class="yen">円</span></p>
             </div>
           </li>
@@ -274,7 +274,7 @@
             <div class="height">
               <a href="_html/menu_item.html">
                 <img src="image/menu/asai.jpg" alt="coffee">
-                <h3>Asai bowl</h3>
+                <h3>Acai bowl</h3>
               </a>
               <p><br></p>
               <p class="price-box"><span class="price">520</span><span class="yen">円</span></p>
@@ -306,7 +306,7 @@
                 <img src="image/menu/pattai.jpg" alt="coffee">
                 <h3>Pattai</h3>
               </a>
-              <p>- gatemara<br>- honduras</p>
+              <p><br></p>
               <p class="price-box"><span class="price">520</span><span class="yen">円</span></p>
             </div>
           </li>
@@ -316,7 +316,7 @@
                 <img src="image/menu/jp_roll.jpg" alt="coffee">
                 <h3>Japanese roll</h3>
               </a>
-              <p>- samon<br>- tuna</p>
+              <p>- salmon<br>- tuna</p>
               <p class="price-box"><span class="price">440</span><span class="yen">円</span></p>
             </div>
           </li>
