--- a/bird_coffee/top.html
+++ b/bird_coffee/top.html
@@ -82,16 +82,18 @@
   <div class="section1" id="area-2">
     <div class="w880">
       <div class="concept-right">
-        <h3>
-        公園で遊んだ後の休憩、ショッピングのあいだに散歩、ペットのお散歩ついでにウォーキング、仕事終わりにリフレッシュ、どんな時間にも寄り添える、ちょっと長めに開いているコーヒーショップです。自然と鳥とそのとなりに、あなたにぴったりの時間を見つけてください。
+        <h3>公園で遊んだ後の休憩、ショッピングのあいだに散歩、ペットのお散歩ついでにウォーキング、仕事終わりにリフレッシュ、どんな時間にも寄り添える、ちょっと長めに開いているコーヒーショップです。自然と鳥とそのとなりに、あなたにぴったりの時間を見つけてください。
         </h3>
         <p class="sub">- This coffee shop is open a little longer and is perfect for taking a break after playing in the
         park, taking a walk while shopping, going for a weekend while walking your pet, or refreshing yourself after
         work. Find the perfect time for you, surrounded by nature and birds.</p>
       </div>
+        <div class="concept-img">
+          <img src="image/concept_mock_img.png" alt="coffee cup" class="pc-img">
+          <img src="image/concept_mock_img.png" alt="coffee cup" class="mb-img">
+      </div>
     </div>
-    <img src="image/top_concept_002.jpg" alt="coffee cup" class="pc-img">
-    <img src="image/top_concept_003.jpg" alt="coffee cup" class="mb-img">
+    
   </div>
 
   <!-- menu -->
@@ -161,36 +163,44 @@
       <div class="item-1">
         <ul>
           <li class="item-box1">
-            <a href="store.html">
-              <img src="image/top_shop_001.png" alt="item1">
-              <p class="item-name">Coffee Beans /HONDURAS</p>
-              <p class="item-type">- gatemara</p>
-              <p class="price-box"><span class="price">880</span><span class="yen">円</span></p>
-            </a>
+            <div class="line">
+              <a href="store.html">
+                <img src="image/item/Pouch Mockup_1.jpg" alt="item1">
+                <p class="item-name">Pamfilo / peru</p>
+                <p class="item-type"></p>
+                <p class="price-box"><span class="price">1,200</span><span class="yen">円</span></p>
+              </a>
+            </div>
           </li>
           <li class="item-box1">
-            <a href="store.html">
-              <img src="image/item/coffee_press.jpg" alt="item1">
-              <p class="item-name">Coffee Presser</p>
-              <p class="item-type"></p>
-              <p class="price-box"><span class="price">1,200</span><span class="yen">円</span></p>
-            </a>
+            <div class="line">
+                <a href="store.html">
+                <img src="image/item/Pouch Mockup_2.jpg" alt="item1">
+                <p class="item-name">El Silencio / Colombia</p>
+                <p class="item-type"></p>
+                <p class="price-box"><span class="price">1,200</span><span class="yen">円</span></p>
+              </a>
+            </div>
           </li>
           <li class="item-box1">
-            <a href="store.html">
-              <img src="image/item/coffee_maker.jpg" alt="item1">
-              <p class="item-name">Coffee Maker</p>
-              <p class="item-type"></p>
-              <p class="price-box"><span class="price">1,200</span><span class="yen">円</span></p>
-            </a>
+            <div class="line">
+              <a href="store.html">
+                <img src="image/item/coffee_press.jpg" alt="item1">
+                <p class="item-name">Coffee Maker</p>
+                <p class="item-type"></p>
+                <p class="price-box"><span class="price">1,200</span><span class="yen">円</span></p>
+              </a>
+            </div>
           </li>
-          <li class="item-box2">
-            <a href="store.html">
-              <img src="image/item/coffee_dripper.jpg" alt="item1">
-              <p class="item-name">Coffee Dripper</p>
-              <p class="item-type"></p>
-              <p class="price-box"><span class="price">880</span><span class="yen">円</span></p>
-            </a>
+          <li class="item-box1">
+            <div class="line">
+              <a href="store.html">
+                <img src="image/item/coffee_dripper.jpg" alt="item1">
+                <p class="item-name">Drip Kettle</p>
+                <p class="item-type"></p>
+                <p class="price-box"><span class="price">3,000</span><span class="yen">円</span></p>
+              </a>
+            </div>
           </li>
         </ul>
       </div>
@@ -245,7 +255,7 @@
           <img src="image/cafe_logo_yellow.png" alt="logo">
           <p>〒151-0052　東京都渋谷区代々木神園町2-1<br>tel:000-0000-0000<br>mail:info@birdcoffee.com</p>
         </div>
-        <p><small>&copy;&nbsp;2024&nbsp;bird&nbsp;coffee&nbsp;company.</small></p>
+        <p class="small"><small>&copy;&nbsp;2024&nbsp;bird&nbsp;coffee&nbsp;company.</small></p>
         <div class="pay-logo">
           <ul>
             <li><img src="image/_made/Master.png" alt="master card"></li>
