--- a/bird_coffee/store.html
+++ b/bird_coffee/store.html
@@ -92,31 +92,11 @@
           <li class="sort02">
             <div class="height2">
               <a href="_html/store_item.html">
-                <img src="image/item/coffee_maker.jpg" alt="item2">
-                <p class="item-name">Coffee Maker</p>
-              </a>
-              <p class="item-type"></p>
-              <p class="price-box"><span class="price">1,200</span><span class="yen">円</span></p>
-            </div>
-          </li>
-          <li class="sort02">
-            <div class="height2">
-              <a href="_html/store_item.html">
                 <img src="image/item/coffee_dripper.jpg" alt="item2">
                 <p class="item-name">Coffee Dripper</p>
               </a>
               <p class="item-type"></p>
-              <p class="price-box"><span class="price">880</span><span class="yen">円</span></p>
-            </div>
-          </li>
-          <li class="sort01">
-            <div class="height2">
-              <a href="_html/store_item.html">
-                <img src="image/top_shop_001.png" alt="item2">
-                <p class="item-name">Coffee Beans /HONDURAS</p>
-              </a>
-              <p class="item-type">- gatemara</p>
-              <p class="price-box"><span class="price">880</span><span class="yen">円</span></p>
+              <p class="price-box"><span class="price">1,200</span><span class="yen">円</span></p>
             </div>
           </li>
           <li class="sort02">
@@ -126,87 +106,107 @@
                 <p class="item-name">Coffee Presser</p>
               </a>
               <p class="item-type"></p>
+              <p class="price-box"><span class="price">880</span><span class="yen">円</span></p>
+            </div>
+          </li>
+          <li class="sort01">
+            <div class="height2">
+              <a href="_html/store_item.html">
+                <img src="image/item/coffee_maker.jpg" alt="item2">
+                <p class="item-name">Coffee Server</p>
+              </a>
+              <p class="item-type"></p>
+              <p class="price-box"><span class="price">1,200</span><span class="yen">円</span></p>
+            </div>
+          </li>
+          <li class="sort02">
+            <div class="height2">
+              <a href="_html/store_item.html">
+                <img src="image/item/coffee-5252373_1280.jpg" alt="item2">
+                <p class="item-name">Drip Kettle</p>
+              </a>
+              <p class="item-type"></p>
+              <p class="price-box"><span class="price">3,000</span><span class="yen">円</span></p>
+            </div>
+          </li>
+          <li class="sort01">
+            <div class="height2">
+              <a href="_html/store_item.html">
+                <img src="image/item/Pouch Mockup_1.jpg" alt="item2">
+                <p class="item-name">Pamfilo / Peru</p>
+              </a>
+              <p class="item-type"></p>
               <p class="price-box"><span class="price">1,200</span><span class="yen">円</span></p>
             </div>
           </li>
           <li class="sort01">
             <div class="height2">
               <a href="_html/store_item.html">
-                <img src="image/top_shop_001.png" alt="item2">
-                <p class="item-name">Coffee Beans /HONDURAS</p>
+                <img src="image/item/Pouch Mockup_2.jpg" alt="item2">
+                <p class="item-name">El Silencio / Clombia</p>
+              </a>
+              <p class="item-type"></p>
+              <p class="price-box"><span class="price">1,200</span><span class="yen">円</span></p>
+            </div>
+          </li>
+          <li class="sort01">
+            <div class="height2">
+              <a href="_html/store_item.html">
+                <img src="image/item/Pouch Mockup_3.jpg" alt="item2">
+                <p class="item-name">Santa Elena / Colombia</p>
+              </a>
+              <p class="item-type"></p>
+              <p class="price-box"><span class="price">1,200</span><span class="yen">円</span></p>
+            </div>
+          </li>
+          <li class="sort01">
+            <div class="height2">
+              <a href="_html/store_item.html">
+                <img src="image/item/Pouch Mockup_4.jpg" alt="item2">
+                <p class="item-name">El Martillo / El Salvador</p>
+              </a>
+              <p class="item-type"></p>
+              <p class="price-box"><span class="price">1,200</span><span class="yen">円</span></p>
+            </div>
+          </li>
+          <li class="sort01">
+            <div class="height2">
+              <a href="_html/store_item.html">
+                <img src="image/item/mug-mockups-v7.jpg" alt="item2">
+                <p class="item-name">Original Mug</p>
               </a>
               <p class="item-type">- gatemara</p>
+              <p class="price-box"><span class="price">2,200</span><span class="yen">円</span></p>
+            </div>
+          </li>
+          <li class="sort01">
+            <div class="height2">
+              <a href="_html/store_item.html">
+                <img src="image/item/Pouch Mockup_1.jpg" alt="item2">
+                <p class="item-name">Coffee Subscription</p>
+              </a>
+              <p class="item-type"></p>
+              <p class="price-box"><span class="price">4,690</span><span class="yen">円</span></p>
+            </div>
+          </li>
+          <li class="sort01">
+            <div class="height2">
+              <a href="_html/store_item.html">
+                <img src="image/item/coffee_press.jpg" alt="item2">
+                <p class="item-name">Coffee Presser</p>
+              </a>
+              <p class="item-type"></p>
               <p class="price-box"><span class="price">880</span><span class="yen">円</span></p>
             </div>
           </li>
           <li class="sort01">
             <div class="height2">
               <a href="_html/store_item.html">
-                <img src="image/top_shop_001.png" alt="item2">
-                <p class="item-name">Coffee Beans /HONDURAS</p>
+                <img src="image/item/coffee_maker.jpg" alt="item2">
+                <p class="item-name">Coffee Server</p>
               </a>
-              <p class="item-type">- gatemara</p>
-              <p class="price-box"><span class="price">880</span><span class="yen">円</span></p>
-            </div>
-          </li>
-          <li class="sort01">
-            <div class="height2">
-              <a href="_html/store_item.html">
-                <img src="image/top_shop_001.png" alt="item2">
-                <p class="item-name">Coffee Beans /HONDURAS</p>
-              </a>
-              <p class="item-type">- gatemara</p>
-              <p class="price-box"><span class="price">880</span><span class="yen">円</span></p>
-            </div>
-          </li>
-          <li class="sort01">
-            <div class="height2">
-              <a href="_html/store_item.html">
-                <img src="image/top_shop_001.png" alt="item2">
-                <p class="item-name">Coffee Beans /HONDURAS</p>
-              </a>
-              <p class="item-type">- gatemara</p>
-              <p class="price-box"><span class="price">880</span><span class="yen">円</span></p>
-            </div>
-          </li>
-          <li class="sort01">
-            <div class="height2">
-              <a href="_html/store_item.html">
-                <img src="image/top_shop_001.png" alt="item2">
-                <p class="item-name">Coffee Beans /HONDURAS</p>
-              </a>
-              <p class="item-type">- gatemara</p>
-              <p class="price-box"><span class="price">880</span><span class="yen">円</span></p>
-            </div>
-          </li>
-          <li class="sort01">
-            <div class="height2">
-              <a href="_html/store_item.html">
-                <img src="image/top_shop_001.png" alt="item2">
-                <p class="item-name">Coffee Beans /HONDURAS</p>
-              </a>
-              <p class="item-type">- gatemara</p>
-              <p class="price-box"><span class="price">880</span><span class="yen">円</span></p>
-            </div>
-          </li>
-          <li class="sort01">
-            <div class="height2">
-              <a href="_html/store_item.html">
-                <img src="image/top_shop_001.png" alt="item2">
-                <p class="item-name">Coffee Beans /HONDURAS</p>
-              </a>
-              <p class="item-type">- gatemara</p>
-              <p class="price-box"><span class="price">880</span><span class="yen">円</span></p>
-            </div>
-          </li>
-          <li class="sort01">
-            <div class="height2">
-              <a href="_html/store_item.html">
-                <img src="image/top_shop_001.png" alt="item2">
-                <p class="item-name">Coffee Beans /HONDURAS</p>
-              </a>
-              <p class="item-type">- gatemara</p>
-              <p class="price-box"><span class="price">880</span><span class="yen">円</span></p>
+              <p class="item-type"></p>
+              <p class="price-box"><span class="price">1,200</span><span class="yen">円</span></p>
             </div>
           </li>
         </ul>
