--- a/bird_coffee/contact.html
+++ b/bird_coffee/contact.html
@@ -73,7 +73,7 @@
         <li><a href="contact.html">CONTACT</a></li>
       </ul>
     </div> 
-    <div class="contact-box">
+    <div class="contact-box fadeInTrigger">
       <div class="title-box">
         <h3 class="c-title-ja">お問い合わせ</h3>
         <!-- <hr> -->
@@ -164,6 +164,7 @@
   <script src="js/main.js"></script>
   <script src="js/SmoothScroll.js"></script>
   <script src="js/header.js"></script>
+  <script src="js/fade.js"></script>
 
 </body>
 
