--- a/bird_coffee/menu.html
+++ b/bird_coffee/menu.html
@@ -87,7 +87,7 @@
         <li class="sort03">TAKE OUT</li>
       </ul>
     </div>
-    <div class="menu-item-box">
+    <div class="menu-item-box fadeInTrigger">
       <div class="menu-item">
         <ul class="grid">
           <li class="sort01 sort03">
@@ -411,6 +411,7 @@
   <script src="js/menu.js"></script>
   <script src="js/SmoothScroll.js"></script>
   <script src="js/header.js"></script>
+  <script src="js/fade.js"></script>
   <!-- /js -->
 
 </body>
