--- a/bird_coffee/park.html
+++ b/bird_coffee/park.html
@@ -86,7 +86,7 @@
     </div>
     <div class="park-map">
       <h2 class="park park-h2">PARK MAP</h2>
-      <img class="zoom" src="image/cafe_map2.jpg" alt="park-map">
+      <img class="zoom fadeInTrigger" src="image/cafe_map2.jpg" alt="park-map">
       <!-- <div id="zoomback">
         <img id="zooming" src="image/cafe_map2.jpg" alt="">
       </div> -->
@@ -97,21 +97,21 @@
         
         <div class="news">
           <ul>
-            <li>
+            <li class="fadeUpTrigger">
               <a href="park.html">
                 <img src="image/event_night.jpg" alt="news">
                 <h3>Jazz Night Event</h3>
                 <p>2024.04.19</p>
               </a>
             </li>
-            <li>
+            <li class="fadeUpTrigger delay-time02">
               <a href="park.html">
                 <img src="image/event_asia.jpg" alt="news">
                 <h3>Asian Food Festival</h3>
                 <p>2024.04.03 - 04.06</p>
               </a>
             </li>
-            <li>
+            <li class="fadeUpTrigger delay-time04">
               <a href="park.html">
                 <img src="image/event_fleamarket.jpg" alt="news">
                 <h3>Thanks!<br>Flea Market</h3>
@@ -188,6 +188,7 @@
   <script src="js/SmoothScroll.js"></script>
   <script src="js/zoom.js"></script>
   <script src="js/header.js"></script>
+  <script src="js/fade.js"></script>
 
 </body>
 
