--- a/bird_coffee/store.html
+++ b/bird_coffee/store.html
@@ -87,7 +87,7 @@
       </ul>
     </div>
     <div class="store-item-box">
-      <div class="store-item">
+      <div class="store-item fadeInTrigger">
         <ul class="grid">
           <li class="sort02">
             <div class="height2">
@@ -288,6 +288,7 @@
   <script src="js/store.js"></script>
   <script src="js/SmoothScroll.js"></script>
   <script src="js/header.js"></script>
+  <script src="js/fade.js"></script>
   <!-- /js -->
 
 
