--- a/index.html
+++ b/index.html
@@ -10,8 +10,49 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/load.scss">
 </head>
 <body>
+  <div id="load">
+    <main class="main-content">
+      <div class="progress-bar"></div>
+      <section class="main-section">
+        <div class="text-animation text-animation--0">
+          <div class="text-animation__container">
+            <span>P</span>
+            <span>O</span>
+            <span>R</span>
+            <span>T</span>
+            <span>F</span>
+            <span>O</span>
+            <span>L</span>
+            <span>I</span>
+            <span>O</span>
+          </div>
+        </div>
+        <div class="text-animation text-animation--1">
+          <div class="text-animation__container">
+            <span>S</span>
+            <span>U</span>
+            <span>Z</span>
+            <span>U</span>
+            <span>K</span>
+            <span>I</span>
+            <span>&nbsp;</span>
+            <span>A</span>
+            <span>O</span>
+            <span>I</span>
+          </div>
+        </div>
+      </section>
+      <section class="main-section">
+      </section>
+      <section class="main-section">
+      </section>
+      <section class="main-section">
+      </section>
+    </main>
+  </div>
   <header id="top">
     <div class="header-bg">
       <a href="#top"><h2 class="big-header">SUZUKI AOI</h2></a>
@@ -53,6 +94,10 @@
       <li></li>
     </ul>
   </div>
-  
+
+  <script src="bird_coffee/js/jquery-3.7.1.min.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/load.js"></script>
+
 </body>
 </html>
